# Doiga

./: Cargo.toml  rust.rs
src/: main.rs
src/controllers/: anime.rs  anime_client.rs  mod.rs
src/models/: anime.rs  mod.rs
src/views/: browser.rs  console.rs  mod.rs  trait_view.rs  view.rs
