[package]
name = "doiga"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
crossterm = "0.27.0"
regex = "1.10.5"
reqwest = { version = "0.11", features = ["json", "blocking"] }
scraper = "0.19.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
